# json-schema-mcp-tool

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/specs/001-schema-crud-mcp-server/: plan.md  spec.md  tasks.md
.specify/specs/001-schema-crud-mcp-server/checklists/: requirements.md
apps/mcp_server/: __init__.py  server.py
apps/mcp_server/tools/: __init__.py  document_tools.py  schema_tools.py
lib/json_schema_core/: __init__.py  config.py
lib/json_schema_core/domain/: document_id.py  errors.py  metadata.py
lib/json_schema_core/services/: document_service.py  schema_service.py  validation_service.py
lib/json_schema_core/storage/: __init__.py  file_storage.py  storage_interface.py
lib/json_schema_core/utils/: json_pointer.py
schemas/: book.json
tests/: test_dummy.py
tests/apps/: __init__.py
tests/apps/mcp_server/: conftest.py  test_document_tools.py  test_schema_tools.py  test_server.py
tests/fixtures/schemas/: __init__.py  text.json
tests/lib/: __init__.py  test_config.py
tests/lib/domain/: test_document_id.py  test_errors.py  test_metadata.py
tests/lib/services/: test_document_service.py  test_schema_service.py  test_validation_service.py
tests/lib/storage/: test_file_storage.py  test_storage_interface.py
tests/lib/utils/: test_json_pointer.py
